# ARKGraph

./: .gitignore  CMakeLists.txt  README.md
include/hnswlib/: hnswalg.h  hnswlib.h
include/kgraph/: CMakeLists.txt  kgraph-data.h  kgraph.cpp  metric.cpp  search.cpp
include/myHNSW/hnswlib-incrementally/: hnswalg.h  space_l2.h
include/myHNSW/hnswlib-nsw/: bruteforce.h  hnswalg.h  hnswlib.h  space_ip.h  space_l2.h  visited_list_pool.h
src/: NearestSearch.h  NearestSearch_kgraph.h  range_index_base.h
src/CompactKNNG/: arkgraph.h  arkgraph_delta.h  arkgraph_delta_heap_version.h  arkgraph_delta_raw.h  arkgraph_delta_st.h  compact_graph_index.h
src/baselines/: greedy.cc  greedy.h  knn_first_baseline.cc  knn_first_baseline.h  range_first_baseline.cc  range_first_baseline.h
src/utils/: CMakeLists.txt  compactArr.hpp  cw.h  segmentTree.hpp  utils.cc  utils.h
tests/: CMakeLists.txt  calculate_groundtruth.cc  exp.cc
